make cc an alias for imp_c

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,4 +8,5 @@ export(imp_assert_scalar_int)
 export(imp_assert_scalar_lgl)
 export(imp_assert_scalar_num)
 export(imp_assert_string)
+export(imp_c)
 importFrom(utils,capture.output)
