--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,4 +9,9 @@ export(imp_assert_scalar_lgl)
 export(imp_assert_scalar_num)
 export(imp_assert_string)
 export(imp_c)
+export(imp_palette)
+importFrom(grDevices,col2rgb)
+importFrom(graphics,axis)
+importFrom(graphics,image)
+importFrom(graphics,text)
 importFrom(utils,capture.output)
