rename interactive functions
Currently leaning towards a prefix of 'imp_' for functions that
are to be used in other packages but not for those intended for
interactive use. Maybe this hints at a natural split in to two
packages but not for the time being.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,8 +8,7 @@ export(imp_assert_scalar_int)
 export(imp_assert_scalar_lgl)
 export(imp_assert_scalar_num)
 export(imp_assert_string)
-export(imp_c)
-export(imp_palette)
+export(plot_palette)
 importFrom(grDevices,col2rgb)
 importFrom(graphics,axis)
 importFrom(graphics,image)
