update for resubmission

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,13 +2,29 @@
 
 export(cc)
 export(imp_assert_bool)
+export(imp_assert_boolean)
+export(imp_assert_character)
+export(imp_assert_chr)
 export(imp_assert_data_frame)
+export(imp_assert_dbl)
+export(imp_assert_double)
+export(imp_assert_int)
+export(imp_assert_integer)
+export(imp_assert_lgl)
 export(imp_assert_list)
+export(imp_assert_logical)
+export(imp_assert_num)
+export(imp_assert_numeric)
+export(imp_assert_scalar_character)
 export(imp_assert_scalar_chr)
 export(imp_assert_scalar_dbl)
+export(imp_assert_scalar_double)
 export(imp_assert_scalar_int)
+export(imp_assert_scalar_integer)
 export(imp_assert_scalar_lgl)
+export(imp_assert_scalar_logical)
 export(imp_assert_scalar_num)
+export(imp_assert_scalar_numeric)
 export(imp_assert_string)
 export(plot_palette)
 importFrom(grDevices,col2rgb)
