--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,22 @@
 Package: ympes
 Type: Package
-Title: Collection of Utility Functions
-Version: 0.1.0
-Author: Tim Taylor
-Maintainer: Tim Taylor <tim.taylor@hiddenelephants.co.uk>
-Description: Provides utility functions both for interactive use and for
-  inclusion in other packages.
+Title: Collection of Helper Functions
+Version: 0.1.1
+Authors@R:
+    c(
+      person(
+        given = "Tim",
+        family = "Taylor",
+        role = c("aut", "cre", "cph"),
+        email = "tim.taylor@hiddenelephants.co.uk", 
+        comment = c(ORCID = "0000-0002-8587-7113")
+      )
+    )
+Description: Provides a collection of lightweight helper functions (imps) both
+  for interactive use and for inclusion within other packages. These include
+  minimal assertion functions with a focus on informative error messaging for
+  both missing and incorrect function arguments as well as other functions for
+  visualising colour palettes and quoting user input.
 License: GPL-2
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
