aggregate_age_counts refactoring and fixes
This commit refactors the R and C implementation for
aggregate_age_counts and now makes the R implementation the
"default". Main changes include:

* Improved documentation.
* Bug fixed in the C implementation which would modify the
  `limits` input when it was an unsorted integer.
* The "unsafe" C implementation has been deleted.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(cc)
 export(imp_aggregate_age_counts)
+export(imp_aggregate_age_counts_c)
 export(imp_assert_bool)
 export(imp_assert_boolean)
 export(imp_assert_character)
