--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: ympes
 Type: Package
 Title: Collection of Helper Functions
 Version: 0.1.1.9000
-Authors@R:
+Authors@R: 
     c(
       person(
         given = "Tim",
@@ -23,5 +23,4 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.1
 Suggests: 
     clipr,
-    testthat (>= 3.0.0)
-Config/testthat/edition: 3
+    tinytest
