--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,11 +16,19 @@ Description: Provides a collection of lightweight helper functions (imps) both
   for interactive use and for inclusion within other packages. These include
   minimal assertion functions with a focus on informative error messaging for
   both missing and incorrect function arguments as well as other functions for
-  visualising colour palettes and quoting user input.
+  visualising colour palettes, quoting user input and working with age
+  intervals.
 License: GPL-2
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.1
 Suggests: 
     clipr,
+    knitr,
+    rmarkdown,
     tinytest
+Depends: 
+    R (>= 3.5.0)
+LazyData: true
+VignetteBuilder: knitr
+
