--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -32,3 +32,4 @@ Depends:
 LazyData: true
 VignetteBuilder: knitr
 URL: https://timtaylor.github.io/ympes/
+BugReports: https://github.com/TimTaylor/ympes/issues
