Remove requirement to prefix assertions with `imp_`
- E.g. `imp_assert_int()` becomes `assert_int()`.

- Old versions are now considered deprecated and will be removed
  in a future release.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,31 @@
 
 export(ages_to_interval)
 export(aggregate_age_counts)
+export(assert_bool)
+export(assert_boolean)
+export(assert_character)
+export(assert_chr)
+export(assert_data_frame)
+export(assert_dbl)
+export(assert_double)
+export(assert_int)
+export(assert_integer)
+export(assert_lgl)
+export(assert_list)
+export(assert_logical)
+export(assert_num)
+export(assert_numeric)
+export(assert_scalar_character)
+export(assert_scalar_chr)
+export(assert_scalar_dbl)
+export(assert_scalar_double)
+export(assert_scalar_int)
+export(assert_scalar_integer)
+export(assert_scalar_lgl)
+export(assert_scalar_logical)
+export(assert_scalar_num)
+export(assert_scalar_numeric)
+export(assert_string)
 export(cc)
 export(imp_assert_bool)
 export(imp_assert_boolean)
