update age utility functions
Deprecate `ages_to_interval()` and replace with `cut_ages()`.

The `limits` parameter has been removed from both `aggregate_age_counts()`
and `reaggregate_age_counts()`. It has been replaced by a `breaks` which
represents the left-hand side of your desired interval bounds (i.e. the
`x` value in `[x, y)`). Intervals no longer span the natural numbers by
default but will begin from the minimum break input. Any ages below this
value are as NA.

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -13,7 +13,7 @@ reference:
   - cc
 - title: "Age interval utilities"
   contents:
-  - ages_to_interval
+  - cut_ages
   - split_interval_counts
   - aggregate_age_counts
   - reaggregate_interval_counts
