--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,6 +28,7 @@ export(assert_scalar_num)
 export(assert_scalar_numeric)
 export(assert_string)
 export(cc)
+export(cut_ages)
 export(imp_assert_bool)
 export(imp_assert_boolean)
 export(imp_assert_character)
