add a breaks to interval function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,7 @@ export(assert_scalar_logical)
 export(assert_scalar_num)
 export(assert_scalar_numeric)
 export(assert_string)
+export(breaks_to_interval)
 export(cc)
 export(cut_ages)
 export(imp_assert_bool)
