--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -13,6 +13,7 @@ reference:
   - cc
 - title: "Age interval utilities"
   contents:
+  - breaks_to_interval
   - cut_ages
   - split_interval_counts
   - aggregate_age_counts
