--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,6 +30,7 @@ export(assert_string)
 export(breaks_to_interval)
 export(cc)
 export(cut_ages)
+export(greprows)
 export(imp_assert_bool)
 export(imp_assert_boolean)
 export(imp_assert_character)
