--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,8 +16,8 @@ Description: Provides a collection of lightweight helper functions (imps) both
   for interactive use and for inclusion within other packages. These include
   minimal assertion functions with a focus on informative error messaging for
   both missing and incorrect function arguments as well as other functions for
-  visualising colour palettes, quoting user input and working with age
-  intervals.
+  visualising colour palettes, quoting user input and searching rows of a data
+  frame.
 License: GPL-2
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
