--- a/NAMESPACE
+++ b/NAMESPACE
@@ -56,6 +56,7 @@ export(imp_assert_scalar_logical)
 export(imp_assert_scalar_num)
 export(imp_assert_scalar_numeric)
 export(imp_assert_string)
+export(new_package)
 export(plot_palette)
 export(reaggregate_interval_counts)
 export(split_interval_counts)
