broaden `new_package()` implementation
- `new_package()` will now add `.Rbuildignore` and `.Rproj` files with sensible
  defaults.

- `np()` is now given as an alias for `new_package()`.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -57,6 +57,7 @@ export(imp_assert_scalar_num)
 export(imp_assert_scalar_numeric)
 export(imp_assert_string)
 export(new_package)
+export(np)
 export(plot_palette)
 export(reaggregate_interval_counts)
 export(split_interval_counts)
