--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,18 +14,34 @@ export(assert_integer)
 export(assert_lgl)
 export(assert_list)
 export(assert_logical)
+export(assert_negative)
+export(assert_negative_or_na)
+export(assert_non_negative)
+export(assert_non_negative_or_na)
+export(assert_non_positive)
+export(assert_non_positive_or_na)
 export(assert_num)
 export(assert_numeric)
+export(assert_positive)
+export(assert_positive_or_na)
 export(assert_scalar_character)
+export(assert_scalar_character_not_na)
 export(assert_scalar_chr)
+export(assert_scalar_chr_not_na)
 export(assert_scalar_dbl)
+export(assert_scalar_dbl_not_na)
 export(assert_scalar_double)
+export(assert_scalar_double_not_na)
 export(assert_scalar_int)
+export(assert_scalar_int_not_na)
 export(assert_scalar_integer)
+export(assert_scalar_integer_not_na)
 export(assert_scalar_lgl)
 export(assert_scalar_logical)
 export(assert_scalar_num)
+export(assert_scalar_num_not_na)
 export(assert_scalar_numeric)
+export(assert_scalar_numeric_not_na)
 export(assert_string)
 export(breaks_to_interval)
 export(cc)
