--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -23,8 +23,9 @@ Authors@R: c(
     ))
 Description: Provides a collection of lightweight helper functions (imps) both
   for interactive use and for inclusion within other packages. These include
-  functions for visualising colour palettes, quoting user input, searching rows
-  of a data frame and capturing string tokens.
+  functions for minimal input assertions, visualising colour palettes,
+  quoting user input, searching rows of a data frame and capturing string
+  tokens.
 License: GPL-3
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
