feat: new function .assert_scalar_whole()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -40,6 +40,7 @@ export(.assert_scalar_num)
 export(.assert_scalar_num_not_na)
 export(.assert_scalar_numeric)
 export(.assert_scalar_numeric_not_na)
+export(.assert_scalar_whole)
 export(.assert_string)
 export(cc)
 export(fstrcapture)
