--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -33,8 +33,8 @@ RoxygenNote: 7.3.1
 Suggests: 
     clipr,
     tinytest
-URL: https://sr.ht/~tim-taylor/ympes/, https://git.sr.ht/~tim-taylor/ympes
-BugReports: https://lists.sr.ht/~tim-taylor/ympes
+URL: https://github.com/TimTaylor/ympes
+BugReports: https://github.com/TimTaylor/ympes/issues
 Imports: 
     methods,
     utils
