--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: ympes
 Type: Package
 Title: Collection of Helper Functions
-Version: 1.3.0.9000
+Version: 1.4.0
 Authors@R: c(
     person(
         given = "Tim",
@@ -33,7 +33,7 @@ RoxygenNote: 7.3.2
 Suggests: 
     clipr,
     tinytest
-URL: https://github.com/TimTaylor/ympes
+URL: https://timtaylor.github.io/ympes/
 BugReports: https://github.com/TimTaylor/ympes/issues
 Imports: 
     methods,
