feat: add new_name() function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -47,6 +47,7 @@ export(fstrcapture)
 export(greplrows)
 export(greprows)
 export(grepvrows)
+export(new_name)
 export(new_package)
 export(np)
 export(plot_palette)
