feat and refactor: update assertions
- New assertion functions:
    - `assert_character_not_na()`, `assert_chr_not_na()`
    - `assert_double_not_na()`, `assert_dbl_not_na()`
    - `assert_integer_not_na()`, `assert_int_not_na()`
    - `assert_integerish()`, `assert_whole()`
    - `assert_logical_not_na()`, `assert_lgl_not_na()`
    - `assert_numeric_not_na()`, `assert_num_not_na()`
    - `assert_scalar_logical_not_na()`, `assert_scalar_lgl_not_na()`
    - `assert_string_not_na()`

- Assertions errors are now given the class "ympes-error".

- **breaking change:** Assertions no longer use `...` to add attributes to
  the resulting error conditions.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,15 +3,24 @@
 export(assert_bool)
 export(assert_boolean)
 export(assert_character)
+export(assert_character_not_na)
 export(assert_chr)
+export(assert_chr_not_na)
 export(assert_data_frame)
 export(assert_dbl)
+export(assert_dbl_not_na)
 export(assert_double)
+export(assert_double_not_na)
 export(assert_int)
+export(assert_int_not_na)
 export(assert_integer)
+export(assert_integer_not_na)
+export(assert_integerish)
 export(assert_lgl)
+export(assert_lgl_not_na)
 export(assert_list)
 export(assert_logical)
+export(assert_logical_not_na)
 export(assert_negative)
 export(assert_negative_or_na)
 export(assert_non_negative)
@@ -19,7 +28,9 @@ export(assert_non_negative_or_na)
 export(assert_non_positive)
 export(assert_non_positive_or_na)
 export(assert_num)
+export(assert_num_not_na)
 export(assert_numeric)
+export(assert_numeric_not_na)
 export(assert_positive)
 export(assert_positive_or_na)
 export(assert_scalar_character)
@@ -35,13 +46,17 @@ export(assert_scalar_int_not_na)
 export(assert_scalar_integer)
 export(assert_scalar_integer_not_na)
 export(assert_scalar_lgl)
+export(assert_scalar_lgl_not_na)
 export(assert_scalar_logical)
+export(assert_scalar_logical_not_na)
 export(assert_scalar_num)
 export(assert_scalar_num_not_na)
 export(assert_scalar_numeric)
 export(assert_scalar_numeric_not_na)
 export(assert_scalar_whole)
 export(assert_string)
+export(assert_string_not_na)
+export(assert_whole)
 export(cc)
 export(fstrcapture)
 export(greplrows)
