feat: add assert_scalar_integerish

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -46,6 +46,7 @@ export(assert_scalar_int)
 export(assert_scalar_int_not_na)
 export(assert_scalar_integer)
 export(assert_scalar_integer_not_na)
+export(assert_scalar_integerish)
 export(assert_scalar_lgl)
 export(assert_scalar_lgl_not_na)
 export(assert_scalar_logical)
