--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -15,7 +15,7 @@ reference:
   - starts_with("grep")
   - fstrcapture
 
-- title: Package development
+- title: Package development (Experimental)
 - contents:
   - np
   - new_package
@@ -24,7 +24,7 @@ reference:
 - contents:
   - plot_palette
 
-- title: Assertions
+- title: Assertions (Experimental)
 - contents:
   - starts_with("assert")
 
